<resources>
    <string name="app_name">MoneySense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragment name pager -->
    <string name="tab_1">Microphone</string>
    <string name="tab_2">Camera</string>
    <string name="tab_3">Realtime Scanner</string>

    <string name="listening">Listening. . .</string>
    <string name="fab_microphone">FAB_Microphone</string>
    <string name="camera_btn">camera_btn</string>

    <string name="switch_mode_button">switch mode button</string>
    <string name="accuracy_bar">Accuracy Bar</string>
    <string name="no_money_detected">No Money Detected</string>
    <string name="nominal">Nominal</string>
    <string name="authentification_score_color">Authentification Score Color</string>
    <string name="authenticity_score">Authenticity Score</string>
    <string name="nominal_rating_color">Nominal Rating Color</string>
    <string name="nominal_rating">Nominal Rating</string>
    <string name="app_logo_moneysense">App Logo MoneySense</string>
    <string name="authentication">Authentication</string>
</resources>